# crewai_test

./: .gitignore  README.md  bitcoin_conspiracy_crewai_tavily.py  crewai_cache_demo.py  env-template  inspect_crew_output.py  pyproject.toml  run.sh  setup_systemd  test_cache_persistence.py  ut_tavily_usage.py
src/: job_dash.py  resume_job_scorer.py
src/job_score/: crew_analyzer.py  job_dash.py  job_scorer_flow.puml  main.py
src/job_score/config/: hr_tasks.yaml  resume_tasks.yaml  tasks copy.yaml
src/job_score/lib/: utils.py
src/job_scorev2/: crew_analyzer.py  job_dash.py  main.py
src/job_scorev2/config/: hr_agents.yaml  hr_tasks.yaml  job_agents.yaml  job_tasks.yaml  resume_agents.yaml  tasks.yaml
src/job_scorev2/lib/: utils.py
src/lib/: utils.py
systemd/: job_score.service
