[project]
name = "openai_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crewai[google-genai,tools]",
    "openai>=2.8.1",
    "diskcache>=5.3.1",
    "streamlit>=1.52.0",
    "litellm>=1.80.8",
    "spacy>=3.8.11",
    "markdownify>=1.2.2",
    "pymupdf4llm>=0.2.7",
    "vulture>=2.14",
]
